samples/_failures_safe/1761419910_959009_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a5e0db4b.c: In function ‘pointcloud_free’:
./samples/SAFE/__tmp_a5e0db4b.c:122:5: error: expected declaration or statement at end of input
  122 |     cloud->count = 0;
      |     ^~~~~
